--- a/home/templates/authentication/password.html
+++ b/home/templates/authentication/password.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "home/layout.html" %}
 
 {% block body %}
     {% load static %}
@@ -23,7 +23,7 @@
                 <button class="btn btn-primary btn-block" type="submit">Login</button>
                 <input type="hidden" name="next" value="{{ next }}"/>
             </form>
-            <p class="text-center"><a href="{% url 'home:reset' %}">Lost password?</a></p>
+            <p class="text-center"><a href="{% url 'home:password_reset' %}">Lost password?</a></p>
         </div>
     </section>
 {% endblock %}
