--- a/home/templates/home/register.html
+++ b/home/templates/home/register.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "home/layout.html" %}
 {% load widget_tweaks %}
 
 {% block title %}Let's create an account{% endblock %}
