--- a/dashboard/templates/dashboard/list.html
+++ b/dashboard/templates/dashboard/list.html
@@ -5,32 +5,33 @@
         <div class="col-12 grid-margin">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title mb-4">{{ title }}</h5>
+                    <div class="float-right">
+                        {% with "dashboard:create_"|add:role as url %}
+                            <a href="{% url url %}"
+                               class="btn btn-outline-success btn-sm">New</a>
+                        {% endwith %}
+                    </div>
+                    <h5 class="card-title mb-4">{{ role }}</h5>
                     <div class="table-responsive">
-                        <table class="table center-aligned-table">
+                        <table class="table center-aligned-table table-hover">
                             <thead>
                             <tr>
                                 <th class="border-bottom-0">Username</th>
                                 <th class="border-bottom-0">First Name</th>
                                 <th class="border-bottom-0">Last Name</th>
-                                <th class="border-bottom-0"></th>
-                                <th class="border-bottom-0"></th>
-                                <th class="border-bottom-0"></th>
+                                <th class="border-bottom-0">Email</th>
                             </tr>
                             </thead>
                             <tbody>
-                            {% for administrator in object_list %}
-                                <tr>
-                                    <td>{{ administrator.user.username }}</td>
-                                    <td>{{ administrator.user.first_name }}</td>
-                                    <td>{{ administrator.user.last_name }}</td>
-                                    <td><label class="badge badge-teal">Approved</label></td>
-                                    <td><a href="#" class="btn btn-outline-success btn-sm">View
-                                        Order</a>
-                                    </td>
-                                    <td><a href="#" class="btn btn-outline-danger btn-sm">Cancel</a>
-                                    </td>
-                                </tr>
+                            {% for user in object_list %}
+                                {% with "dashboard:"|add:role as url %}
+                                    <tr class='clickable-row' data-href='{% url url pk=user.pk %}'>
+                                        <td>{{ user.username }}</td>
+                                        <td>{{ user.first_name }}</td>
+                                        <td>{{ user.last_name }}</td>
+                                        <td>{{ user.email }}</td>
+                                    </tr>
+                                {% endwith %}
                             {% endfor %}
                             </tbody>
                         </table>
@@ -39,4 +40,15 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block scripts %}
+<script>
+
+jQuery(document).ready(function($) {
+    $(".clickable-row").click(function() {
+        window.location = $(this).data("href");
+    });
+});
+</script>
 {% endblock %}
