--- a/home/templates/authentication/register.html
+++ b/home/templates/authentication/register.html
@@ -6,16 +6,12 @@
 
 {% block form %}
     <form method="POST">
+        {{ form.errors }}
         {% csrf_token %}
         <div class="form-group">
             {{ form.organization_name.label_tag }}
             {{ form.organization_name | add_class:"form-control" }}
         </div>
-        <div class="form-group">
-            {{ form.organization_schema.label_tag }}
-            {{ form.organization_schema | add_class:"form-control" }}
-        </div>
-        <hr>
         <div class="form-group">
             {{ form.username.label_tag }}
             {{ form.username | add_class:"form-control" }}
