--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,11 +1,11 @@
-{% extends "layout.html" %}
+{% extends "home/layout.html" %}
 
 {% block body %}
     {% load static %}
     <header class="vertical-center text-center">
         <div class="container">
             <h1 class="display-5">Love your child care management software.</h1>
-            <a class="btn btn-primary btn-lg btn-demo" href="{% url 'home:index' %}">
+            <a class="btn btn-primary btn-lg btn-demo" href="{% url 'home:register' %}">
                 Get Started for Free</a>
             <a class="btn btn-primary btn-lg btn-learn" href="#">Watch Our Video</a>
             <p></p>
