--- a/home/templates/home/layout.html
+++ b/home/templates/home/layout.html
@@ -55,7 +55,11 @@
             <a class="p-2 text-dark" href="{% url 'home:features' %}">Features</a>
             <a class="p-2 text-dark" href="{% url 'home:contact' %}">Contact</a>
         </nav>
-        <a class="btn btn-primary" href="{% url 'home:register' %}">Get Started</a>
+        {% if user.is_authenticated %}
+            <a class="btn btn-primary" href="{% url 'dashboard:index' %}">Dashboard</a>
+        {% else %}
+             <a class="btn btn-primary" href="{% url 'home:login' %}">Login</a>
+        {% endif %}
     </div>
 {% endblock %}
 
