--- a/dashboard/templates/dashboard/layout.html
+++ b/dashboard/templates/dashboard/layout.html
@@ -226,20 +226,21 @@
                     {% endwith %}
                 </li>
 
-                <li class="nav-item"><a class="nav-link" href="{% url 'dashboard:index' %}">
-                    <img class="menu-icon"
-                         src="{% static 'images/menu_icons/01.png' %}"
-                         alt="menu icon"><span
-                        class="menu-title">Dashboard</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'dashboard:index' %}">
+                        <img class="menu-icon"
+                             src="{% static 'images/menu_icons/01.png' %}"
+                             alt="menu icon"><span
+                            class="menu-title">Dashboard</span></a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link collapsed" data-toggle="collapse" href="#general-pages"
                        aria-expanded="true"
-                       aria-controls="general-pages"><img class="menu-icon"
-                                                          src="https://eastsidefamilymedicine.com/wp-content/uploads/2017/04/favicon2.png"
-                                                          alt="menu icon">
-                        <span class="menu-title">Users</span><i class="menu-arrow"></i></a>
+                       aria-controls="general-pages">
+                        <img class="menu-icon"
+                             src="https://cdn4.iconfinder.com/data/icons/little-boy/128/Little_Boy_White.png"
+                             alt="menu icon">
+                        <span class="menu-title">People</span><i class="menu-arrow"></i></a>
 
                     <div class="collapse" id="general-pages">
                         <ul class="nav flex-column sub-menu">
@@ -259,29 +260,21 @@
                         </ul>
                     </div>
                 </li>
-                {#                <li class="nav-item"><a class="nav-link" href="pages/widgets.html"><img class="menu-icon"#}
-                {#                                                                                        src="{% static 'images/menu_icons/02.png' %}"#}
-                {#                                                                                        alt="menu icon"><span#}
-                {#                        class="menu-title">Widgets</span></a></li>#}
-                {#                <li class="nav-item"><a class="nav-link" href="pages/ui-features/buttons.html"><img class="menu-icon"#}
-                {#                                                                                                    src="{% static 'images/menu_icons/03.png' %}"#}
-                {#                                                                                                    alt="menu icon"><span#}
-                {#                        class="menu-title">Buttons</span></a></li>#}
-                {#                <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html"><img class="menu-icon"#}
-                {#                                                                                                     src="{% static 'images/menu_icons/04.png' %}"#}
-                {#                                                                                                     alt="menu icon"><span#}
-                {#                        class="menu-title">Form</span></a></li>#}
-                {#                <li class="nav-item"><a class="nav-link" href="pages/charts/chartjs.html"><img class="menu-icon"#}
-                {#                                                                                               src="{% static 'images/menu_icons/05.png' %}"#}
-                {#                                                                                               alt="menu icon"><span#}
-                {#                        class="menu-title">Charts</span></a></li>#}
-                {#                <li class="nav-item"><a class="nav-link" href="pages/tables/basic-table.html"><img class="menu-icon"#}
-                {#                                                                                                   src="{% static 'images/menu_icons/06.png' %}"#}
-                {#                                                                                                   alt="menu icon"><span#}
-                {#                        class="menu-title">Table</span></a></li>#}
-                <li class="nav-item"><a class="nav-link" href="{% url 'home:logout' %}">
-                    <img class="menu-icon" src="http://icons.iconarchive.com/icons/custom-icon-design/flatastic-9/512/Logout-icon.png" alt="menu icon">
-                    <span class="menu-title">Logout</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'core:organization' pk=request.user.organization.pk %}">
+                        <img class="menu-icon"
+                             src="http://www.bootstrapdash.com/demo/star-admin-pro/jquery/images/menu_icons/29.png"
+                             alt="menu icon">
+                        <span class="menu-title">{{ request.user.organization.name|title }}</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'home:logout' %}">
+                        <img class="menu-icon"
+                             src="http://icons.iconarchive.com/icons/custom-icon-design/flatastic-9/512/Logout-icon.png"
+                             alt="menu icon">
+                        <span class="menu-title">Logout</span>
+                    </a>
                 </li>
 
             </ul>
@@ -330,6 +323,16 @@
 <script src="{% static 'js/dashboard.js' %}"></script>
 <script src="{% static 'js/maps.js' %}"></script>
 {% block scripts %}
+    <script>
+        {{ block.super }}
+        setTimeout(function () {
+            $('.purchace-popup').fadeToggle();
+        }, 4000);
+    </script>
+{% endblock %}
+
+{% block pagescripts %}
+    {{ block.super }}
 {% endblock %}
 </body>
 
