--- a/dashboard/templates/dashboard/user/profile.html
+++ b/dashboard/templates/dashboard/user/profile.html
@@ -4,7 +4,6 @@
 
 {% block styles %}
     <link rel="stylesheet" href="{% static 'node_modules/dropify/dist/css/dropify.css' %}" type="text/css">
-
     <style>
         .user-profile .side-left .card .avatar img {
             display: block;
@@ -54,9 +53,7 @@
     </style>
 {% endblock %}
 
-
 {% block content %}
-
     <div class="row user-profile mb-4">
         {% block sidebar_left %}
             <div class="col-md-4">
@@ -70,9 +67,18 @@
                                     <p class="name">{{ object.username }}</p>
                                 {% endif %}
                                 <p class="role">{{ object.role_level | title }}</p>
-                                <a class="d-block text-center text-dark" href="#">{{ object.email }}</a>
-                                <a class="d-block text-center text-dark" href="#">{{ object.phone_number }}</a>
-                                {% if user.role_level == 'administrator' %}
+                                {% if object.role_level == 'student' %}
+                                    {% if object.checked_in %}
+                                        <a href="{% url 'dashboard:attendance:check_out' user_id=object.pk %}">
+                                            <button class="btn btn-warning btn-block mt-2">Check Out</button>
+                                        </a>
+                                    {% else %}
+                                        <a href="{% url 'dashboard:attendance:check_in' user_id=object.pk %}">
+                                            <button class="btn btn-success btn-block mt-2">Check In</button>
+                                        </a>
+                                    {% endif %}
+                                {% endif %}
+                                {% if user.role_level == 'administrator' and user.id is not object.id %}
                                     <a href="{% url 'dashboard:delete_user' pk=object.pk %}">
                                         <button class="btn btn-outline-danger btn-block mt-2">Delete</button>
                                     </a>
@@ -82,7 +88,6 @@
                     </div>
                     <div class="col-12 grid-margin side-leftrender">
                         {% block sidebar_left_bottom %}
-
                         {% endblock %}
                     </div>
                 </div>
@@ -148,7 +153,7 @@
                                             <small class="form-text text-danger">{{ form.phone_number.errors }}</small>
                                         </div>
                                         <div class="form-group">
-                                            <label for="name">{{ form.avatar.label }}</label>
+                                            <label for="name">Profile Image</label>
                                             {% render_field form.avatar data-height="100" class+="dropify" %}
                                             <small class="form-text text-danger">{{ form.avatar.errors }}</small>
                                         </div>
@@ -193,16 +198,16 @@
         {% endblock %}
     </div>
     {% block user_content %}
-
     {% endblock %}
-
 {% endblock %}
 
 {% block scripts %}
+    {{ block.super }}
     <script src="{% static 'node_modules/jquery/dist/jquery.js' %}"></script>
-    <script src="{% static 'node_modules/moment/moment.js' %}"></script>
-    <script src="{% static 'node_modules/fullcalendar/dist/fullcalendar.min.js' %}"></script>
     <script src="{% static 'node_modules/dropify/dist/js/dropify.min.js' %}"></script>
-    <script src="{% static 'js/calendar.js' %}"></script>
     <script src="{% static 'js/dropify.js' %}"></script>
+{% endblock %}
+
+{% block pagescripts %}
+    {{ block.super }}
 {% endblock %}
