--- a/dashboard/templates/dashboard/user/student.html
+++ b/dashboard/templates/dashboard/user/student.html
@@ -13,7 +13,7 @@
             });
             parents.each(function (index, parent) {
                 parent.style.display = 'none';
-                if (term.length > 0) {
+                if (term.length > 1) {
                     var id = parent.getAttribute('data-id');
                     if (linked_ids.includes(id)) return;
                     var first_name_match = parent.getAttribute('data-first-name').toLowerCase().indexOf(term) !== -1;
@@ -65,52 +65,54 @@
             </div>
         </div>
     </div>
-    <div class="card mt-4">
-        <div class="card-body">
-            <h4 class="card-title">Link a Parent</h4>
-            <div class="add-items d-flex mt-2">
-                <input type="text" class="form-control todo-list-input"
-                       onkeyup="search_student(this)" placeholder="Search by parent name, username or email">
-            </div>
-            <div class="preview-list">
-                {% for parent in all_parents %}
-                    <div class="preview-item border-bottom px-0 search-parent" style="display: none"
-                         data-first-name="{{ parent.first_name }}"
-                         data-username="{{ parent.username }}"
-                         data-email="{{ parent.email }}"
-                         data-id="{{ parent.pk }}"
-                         data-last-name="{{ parent.last_name }}" disabled="">
-                        <a href="{% url 'dashboard:parent' pk=parent.pk %}">
-                            <div class="preview-thumbnail">
-                                <img src="{{ parent.profile_image_url }}" alt="image" class="rounded-circle">
-                            </div>
-                        </a>
-                        <div class="preview-item-content d-flex flex-grow">
-                            <div class="flex-grow">
-                                <h6 class="preview-subject">
-                                    <a href="{% url 'dashboard:parent' pk=parent.pk %}">
-                                        {{ parent.first_name }} {{ parent.last_name }}
-                                    </a>
-                                    <span class="float-right small">
+    {% if user.role_level == 'administrator' %}
+        <div class="card mt-4">
+            <div class="card-body">
+                <h4 class="card-title">Link a Parent</h4>
+                <div class="add-items d-flex mt-2">
+                    <input type="text" class="form-control todo-list-input"
+                           onkeyup="search_student(this)" placeholder="Search by parent name, username or email">
+                </div>
+                <div class="preview-list">
+                    {% for parent in all_parents %}
+                        <div class="preview-item border-bottom px-0 search-parent" style="display: none"
+                             data-first-name="{{ parent.first_name }}"
+                             data-username="{{ parent.username }}"
+                             data-email="{{ parent.email }}"
+                             data-id="{{ parent.pk }}"
+                             data-last-name="{{ parent.last_name }}" disabled="">
+                            <a href="{% url 'dashboard:parent' pk=parent.pk %}">
+                                <div class="preview-thumbnail">
+                                    <img src="{{ parent.profile_image_url }}" alt="image" class="rounded-circle">
+                                </div>
+                            </a>
+                            <div class="preview-item-content d-flex flex-grow">
+                                <div class="flex-grow">
+                                    <h6 class="preview-subject">
+                                        <a href="{% url 'dashboard:parent' pk=parent.pk %}">
+                                            {{ parent.first_name }} {{ parent.last_name }}
+                                        </a>
+                                        <span class="float-right small">
                                         <a href="{% url 'core:link_parent_student' parent_id=parent.pk student_id=object.pk %}">
-                                        <button class="btn btn-sm btn-outline-success">Link</button>
+                                            <button class="btn btn-sm btn-outline-success">Link</button>
                                         </a>
                                     </span>
-                                </h6>
+                                    </h6>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                {% endfor %}
+                    {% endfor %}
+                </div>
             </div>
         </div>
-    </div>
+    {% endif %}
     <div class="card mt-4">
         <div class="card-body">
             <h4 class="card-title">Resources</h4>
-            <a href="{% url 'dashboard:index' %}">
-                <button class="btn btn-outline-success btn-block mt-2">Calendar</button>
+            <a href="{% url 'dashboard:report:calendar' user_id=object.pk %}">
+                <button class="btn btn-outline-success btn-block mt-2">Reports</button>
             </a>
-            <a href="{% url 'dashboard:index' %}">
+            <a href="{% url 'dashboard:attendance:calendar' user_id=object.pk %}">
                 <button class="btn btn-outline-success btn-block mt-2">Attendance</button>
             </a>
         </div>
