--- a/home/templates/authentication/register.html
+++ b/home/templates/authentication/register.html
@@ -4,39 +4,44 @@
 {% block title %}Let's create an account{% endblock %}
 {% block submit %}Register{% endblock %}
 
-{% block form %}
+{% block content %}
     <form method="POST">
-        {{ form.errors }}
         {% csrf_token %}
         <div class="form-group">
             {{ form.organization_name.label_tag }}
             {{ form.organization_name | add_class:"form-control" }}
+            {{ form.organization_name.errors }}
         </div>
         <div class="form-group">
             {{ form.username.label_tag }}
             {{ form.username | add_class:"form-control" }}
+            {{ form.username.errors }}
         </div>
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
                     {{ form.first_name.label_tag }}
                     {{ form.first_name | add_class:"form-control" }}
+                    {{ form.first_name.errors }}
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
                     {{ form.last_name.label_tag }}
                     {{ form.last_name | add_class:"form-control" }}
+                    {{ form.last_name.errors }}
                 </div>
             </div>
         </div>
         <div class="form-group">
             {{ form.email.label_tag }}
             {{ form.email | add_class:"form-control" }}
+            {{ form.email.errors }}
         </div>
         <div class="form-group">
             {{ form.password.label_tag }}
             {{ form.password | add_class:"form-control" }}
+            {{ form.password.errors }}
         </div>
         <button class="btn btn-primary btn-block" type="submit">Register</button>
         <input type="hidden" name="next" value="{{ next }}"/>
